alteração na imagem

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="container-2">
-        <img src="./(Positive) Congratulation You get 40 point for your ride (1).png" alt="imagem">
+        <img src="./assets/(Positive) Congratulation You get 40 point for your ride (1).png" alt="imagem">
         <div class="caixa-txt">
             <h1>Wide coverage location</h1>
             <p>Shared rides, There's lots to do in your city, and we've got the rides to help you enjoy it all. And
